# AudireReader

./: .gitignore  AGENTS.md  README.md  flutter_launcher_icons.yaml  l10n.yaml  pubspec.yaml  shorebird.yaml  test_memory_leak.dart  test_tts.dart
.agents/workflows/: flutter-add-integration-test.md  flutter-add-widget-preview.md  flutter-add-widget-test.md  flutter-apply-architecture-best-practices.md  flutter-build-responsive-layout.agent.md  flutter-fix-layout-issues.agent.md  flutter-implement-json-serialization.agent.md  flutter-setup-declarative-routing.agent.md  flutter-setup-localization.md  flutter-use-http-package.agent.md
.github/workflows/: android.yml  ios.yml  patch.yml  release.yml
android/: build.gradle.kts  fix_plugins.gradle
android/app/: build.gradle.kts
integration_test/: simple_test.dart  tts_ui_test.dart
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: global_hotkey_manager.dart  locale_notifier.dart  shortcut_helper.dart  system_tray_manager.dart  theme_notifier.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_vi.dart  app_vi.arb
lib/models/: bgm_track.dart  bgm_track.g.dart  book.dart  book.g.dart  bookmark.dart  bookmark.g.dart  chapter.dart  chapter.g.dart  highlight.dart  highlight.g.dart  (+8 more)
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: database.rs  mod.rs  models.rs  parsers.rs  sync.rs  tts.rs
rust_builder/: pubspec.yaml
web/: index.html
windows/: CMakeLists.txt
(+90 files in other folders)
