[package]
name = "rust_lib_audire_reader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
once_cell = "1.19.0"
parking_lot = "0.12.1"
epub = "2.1.2"
pdf-extract = "0.7.5"
zip = "2.1.6"
quick-xml = "0.36.1"
regex = "1.10.6"
scraper = "0.20.0"
chrono = "0.4.45"
html2text = "0.17.1"
reqwest = { version = "0.13.4", features = ["rustls", "json", "stream", "cookies", "form"] }
base64 = "0.22.1"
tts = "0.26.3"
serde_json = "1.0.151"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
